В CSV выгружеются параметры чека ФН, ФД, ФП. При экспорте CSV появилась опция "Экспорт товаров", при ее выборе транзакции, имеющие товары, разбиваются на несколько строк в соответсвии со списком товаров. Каждому товару указывается своя цена, категория и проект.

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -1278,6 +1278,10 @@
     <string name="ttl_select_export_dir" formatted="false">Выберите файл или каталог</string>
 
     <!-- 17. Import & Export -->
+    <!-- Titles -->
+    <string name="ttl_export_products" formatted="false">Выгружать товары</string>
+
+    <!-- 17. Import & Export -->
     <!-- Errors -->
     <string name="err_set_dir" formatted="false">Пожалуйста выберите файл или каталог</string>
 
