--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -255,6 +255,14 @@
 
     <!-- 1. General -->
     <!-- Titles -->
+    <string name="ttl_email_subject" formatted="false">Вопрос по приложению Fingen</string>
+
+    <!-- 1. General -->
+    <!-- Titles -->
+    <string name="ttl_email_body" formatted="false">Напишите свой вопрос</string>
+
+    <!-- 1. General -->
+    <!-- Titles -->
     <string name="ttl_billing_error" formatted="false">При соединении с сервером произошла ошибка (код %s)</string>
 
     <!-- 1. General -->
