--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -183,6 +183,10 @@
 
     <!-- 1. General -->
     <!-- Actions -->
+    <string name="act_select" formatted="false">Выбрать</string>
+
+    <!-- 1. General -->
+    <!-- Actions -->
     <string name="act_add" formatted="false">Добавить</string>
 
     <!-- 1. General -->
@@ -620,6 +624,10 @@
     <!-- 4. Payees -->
     <!-- Titles -->
     <string name="ttl_edit_payee" formatted="false">Изменение получателя/плательщика</string>
+
+    <!-- 4. Payees -->
+    <!-- Titles -->
+    <string name="ttl_create_new_payee_from_marker" formatted="false">Создать нового получателя/плательщика %s или выбрать имеющегося?</string>
 
     <!-- 5. Categories -->
     <!-- Entities -->
