--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -453,6 +453,10 @@
     <!-- Errors -->
     <string name="err_specify_account_currency" formatted="false">You must specify currency of the account</string>
 
+    <!-- 2. Accounts -->
+    <!-- Errors -->
+    <string name="err_account_name_must_be_unique" formatted="false">Account name must be unique</string>
+
     <!-- 3. Transactions -->
     <!-- Entities -->
     <string name="ent_transaction" formatted="false">Transaction</string>
