--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1587,7 +1587,7 @@
 
     <!-- 20. Settings -->
     <!-- Security -->
-    <string name="toast_pin_turn_off_pinlock_before_change_pin_length" formatted="false">Please disable PIN protection before changing PIN length</string>
+    <string name="pref_pin_lock_timeout" formatted="false">PIN lock timeout</string>
 
     <!-- 20. Settings -->
     <!-- Transaction editor -->
