--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1587,7 +1587,7 @@
 
     <!-- 20. Settings -->
     <!-- Security -->
-    <string name="pref_pin_lock_timeout" formatted="false">Таймаут блокировки</string>
+    <string name="pref_pin_lock_timeout" formatted="false">Таймаут блокировки, сек.</string>
 
     <!-- 20. Settings -->
     <!-- Transaction editor -->
