--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1587,7 +1587,7 @@
 
     <!-- 20. Settings -->
     <!-- Security -->
-    <string name="pref_pin_lock_timeout" formatted="false">PIN lock timeout</string>
+    <string name="pref_pin_lock_timeout" formatted="false">PIN lock timeout, seconds</string>
 
     <!-- 20. Settings -->
     <!-- Transaction editor -->
