--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2018,6 +2018,10 @@
     <string name="ttl_you_can_edit_later" formatted="false">You can edit credentials later in Preferences</string>
 
     <!-- 27. Products -->
+    <!-- Titles -->
+    <string name="ttl_move_residue" formatted="false">Add %s to transaction sum</string>
+
+    <!-- 27. Products -->
     <!-- Messages -->
     <string name="msg_delete_product_confirmation" formatted="false">Delete product?</string>
 
