--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -1629,6 +1629,10 @@
     <!-- Transaction editor -->
     <string name="pref_title_colored_tags" formatted="false">Цветные метки категорий и проектов</string>
 
+    <!-- 20. Settings -->
+    <!-- Transaction editor -->
+    <string name="pref_title_tredit_layout_constructor" formatted="false">Настройка редактора транзакций</string>
+
     <!-- 21. Help -->
     <!-- Edit transaction -->
     <string name="hlp_tr_editor_intro" formatted="false">На этом экране изменяются свойства транзакции. Транзакция, это любое перемещение Ваших денежных средств (приход, расход или перевод)</string>
