--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1629,6 +1629,10 @@
     <!-- Transaction editor -->
     <string name="pref_title_colored_tags" formatted="false">Colored category and project tags</string>
 
+    <!-- 20. Settings -->
+    <!-- Transaction editor -->
+    <string name="pref_title_tredit_layout_constructor" formatted="false">Customize transaction editor</string>
+
     <!-- 21. Help -->
     <!-- Edit transaction -->
     <string name="hlp_tr_editor_intro" formatted="false">On this screen you can change transaction properties. A transaction is any movement of your money (income, expense or transfer)</string>
