--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2026,6 +2026,10 @@
     <string name="ent_code_from_sms" formatted="false">Code from SMS</string>
 
     <!-- 27. Products -->
+    <!-- Entities -->
+    <string name="ent_unknown_product" formatted="false">Unknown product</string>
+
+    <!-- 27. Products -->
     <!-- Actions -->
     <string name="act_add_product" formatted="false">Add product...</string>
 
