--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1982,6 +1982,10 @@
     <string name="msg_permission_is_not_available" formatted="false">Пожалуйста, дайте разрешение на использование камеры</string>
 
     <!-- 26. ScanQR -->
+    <!-- Messages -->
+    <string name="msg_use_qr_from_buffer" formatted="false">В буфере обмена обнаружен QR-код использовать его?</string>
+
+    <!-- 26. ScanQR -->
     <!-- Entities -->
     <string name="ent_fn" formatted="false">ФН</string>
 
