From Screamer_dot: Add debt fragment to main activity and hide closed debts

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1503,6 +1503,10 @@
 
     <!-- 20. Settings -->
     <!-- General -->
+    <string name="pref_show_closed_debts" formatted="false">Показывать закрытые долги</string>
+
+    <!-- 20. Settings -->
+    <!-- General -->
     <string name="pref_enable_scan_qr" formatted="false">Вкл. сканер чеков</string>
 
     <!-- 20. Settings -->
