Close #8 Add option to settings for showing transactions closed account

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1531,6 +1531,10 @@
 
     <!-- 20. Settings -->
     <!-- Account list -->
+    <string name="pref_title_show_closed_account_transactions" formatted="false">Показывать транзакции закрытых счетов</string>
+
+    <!-- 20. Settings -->
+    <!-- Account list -->
     <string name="pref_title_accounts_list_show_credits" formatted="false">Показывать кредитные счета</string>
 
     <!-- 20. Settings -->
