Refactored FTS login activity. Add sign up account and recovery code

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -235,6 +235,10 @@
 
     <!-- 1. General -->
     <!-- Actions -->
+    <string name="act_check_and_save" formatted="false">Проверить и Сохранить</string>
+
+    <!-- 1. General -->
+    <!-- Actions -->
     <string name="act_ask_question" formatted="false">Задать вопрос</string>
 
     <!-- 1. General -->
@@ -2051,6 +2055,26 @@
 
     <!-- 27. Products -->
     <!-- Entities -->
+    <string name="ent_fts_name" formatted="false">Ваше имя</string>
+
+    <!-- 27. Products -->
+    <!-- Entities -->
+    <string name="ent_fts_email" formatted="false">Ваша электронная почта (e-mail)</string>
+
+    <!-- 27. Products -->
+    <!-- Entities -->
+    <string name="ttl_create_account" formatted="false">Создать аккаунт</string>
+
+    <!-- 27. Products -->
+    <!-- Entities -->
+    <string name="ttl_recovery_code" formatted="false">Забыли код?</string>
+
+    <!-- 27. Products -->
+    <!-- Entities -->
+    <string name="ttl_exit_account" formatted="false">Выйти из аккаунта</string>
+
+    <!-- 27. Products -->
+    <!-- Entities -->
     <string name="ent_unknown_product" formatted="false">Неизвестный товар</string>
 
     <!-- 27. Products -->
@@ -2068,6 +2092,14 @@
     <!-- 27. Products -->
     <!-- Titles -->
     <string name="ttl_loading_products" formatted="false">Загрузка товаров...</string>
+
+    <!-- 27. Products -->
+    <!-- Titles -->
+    <string name="ttl_checking_data" formatted="false">Проверка введенных данных…</string>
+
+    <!-- 27. Products -->
+    <!-- Titles -->
+    <string name="ttl_auth_success" formatted="false">Успешная авторизация</string>
 
     <!-- 27. Products -->
     <!-- Titles -->
@@ -2091,15 +2123,7 @@
 
     <!-- 27. Products -->
     <!-- Titles -->
-    <string name="ttl_not_now" formatted="false">Не сейчас</string>
-
-    <!-- 27. Products -->
-    <!-- Titles -->
-    <string name="ttl_do_not_show_again" formatted="false">Больше не показывать</string>
-
-    <!-- 27. Products -->
-    <!-- Titles -->
-    <string name="ttl_you_can_edit_later" formatted="false">Параметры можно изменить позже в настройках</string>
+    <string name="ttl_back" formatted="false">Назад</string>
 
     <!-- 27. Products -->
     <!-- Titles -->
@@ -2116,10 +2140,6 @@
     <!-- 27. Products -->
     <!-- Errors -->
     <string name="err_set_product" formatted="false">Нужно указать товар</string>
-
-    <!-- 27. Products -->
-    <!-- Messages -->
-    <string name="msg_fts_login_html" formatted="false"><![CDATA[<p>Для получения возможности скачивания списка товаров из чека:</p><p>&nbsp;&nbsp;&nbsp; 1. Установите приложение "<strong>Проверка касcового чека</strong>" (автор <strong>АО ГНИВЦ</strong>).</p><p>&nbsp;&nbsp;&nbsp; 2. Зарегистрируйтесь в нем при помощи номера мобильного телефона и получите код по смс.</p><p>&nbsp;&nbsp;&nbsp; 3. Введите номер телефона и код в форму ниже.</p><p>&nbsp;&nbsp;&nbsp; 4. Нажмите "<strong>Сохранить</strong>".</p>]]></string>
 
     <!-- 28. EditorConstructor -->
     <!-- Entities -->
