Reset code for FTS if response code is 403 from get check

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2099,6 +2099,10 @@
 
     <!-- 27. Products -->
     <!-- Titles -->
+    <string name="ttl_user_incorrect" formatted="false">Пользователь не найден или указанный код устарел! Параметры аутентификации в ФНС сброшены.</string>
+
+    <!-- 27. Products -->
+    <!-- Titles -->
     <string name="ttl_checking_data" formatted="false">Проверка введенных данных…</string>
 
     <!-- 27. Products -->
