--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2099,6 +2099,10 @@
 
     <!-- 27. Products -->
     <!-- Titles -->
+    <string name="ttl_user_incorrect" formatted="false">The specified user was not found or the specified code was not correct! Authentication settings reset.</string>
+
+    <!-- 27. Products -->
+    <!-- Titles -->
     <string name="ttl_checking_data" formatted="false">Checking input data...</string>
 
     <!-- 27. Products -->
