Add button of toggle closing account to context menu

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -343,6 +343,14 @@
 
     <!-- 2. Accounts -->
     <!-- Entities -->
+    <string name="ent_close_account" formatted="false">Закрыть счет</string>
+
+    <!-- 2. Accounts -->
+    <!-- Entities -->
+    <string name="ent_open_account" formatted="false">Открыть счет</string>
+
+    <!-- 2. Accounts -->
+    <!-- Entities -->
     <string name="ent_account_isincludeintototals" formatted="false">Включать в итог</string>
 
     <!-- 2. Accounts -->
@@ -464,6 +472,14 @@
     <!-- 2. Accounts -->
     <!-- Messages -->
     <string name="msg_delete_account_set_confirmation" formatted="false">Удалить набор счетов %s?</string>
+
+    <!-- 2. Accounts -->
+    <!-- Messages -->
+    <string name="msg_close_account_confirmation" formatted="false">Закрыть счет %s?</string>
+
+    <!-- 2. Accounts -->
+    <!-- Messages -->
+    <string name="msg_open_account_confirmation" formatted="false">Открыть счет %s?</string>
 
     <!-- 2. Accounts -->
     <!-- Messages -->
