Add departament to product entry

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2079,6 +2079,10 @@
 
     <!-- 27. Products -->
     <!-- Entities -->
+    <string name="ent_split_department" formatted="false">Сплит подр.</string>
+
+    <!-- 27. Products -->
+    <!-- Entities -->
     <string name="ent_quantity" formatted="false">Количество</string>
 
     <!-- 27. Products -->
